# Query-Dependent

./: 110927-Team Query Dependent - Project Description.docx  CMakeLists.txt  README
data/: Test Flight 1.csv  Test Flight 2.csv  Test Flight 3.csv  Test Flight 4.csv  Test Flight 5.csv  Test Flight 6.csv  Test Flight 7.csv
src/Tests/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
src/Visualization/: CMakeLists.txt  Chart.cpp  Chart.h  Chart_ParallelCoordinates.cpp  Chart_ParallelCoordinates.h  CsvParser.cpp  CsvParser.h  DataMgmt.cpp  DataMgmt.h  DataNormalizer.cpp  DataNormalizer.h  DataProcessor.cpp  DataProcessor.h  DataQueue.cpp  DataQueue.h  DataSelections.cpp  DataSelections.h  DataTypes.cpp  DataTypes.h  DockWidgetAttributes.cpp  DockWidgetAttributes.h  DockWidgetAttributes.ui  EventDetector.cpp  EventDetector.h  LinkLabel.cpp  LinkLabel.hpp  MapWidget.cpp  MapWidget.h  TableEditor.cpp  TableEditor.h  TimeSlider.cpp  TimeSlider.h  Visualization.cpp  Visualization.h  Visualization.qrc  Visualization.ui  main.cpp
src/Visualization/seansGlyphCode/: EventGlyph.cpp  EventGlyph.h  RealTimeGlyph.cpp  RealTimeGlyph.h  main.cpp
